samples/_failures_safe/1761338145_f43f2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cd131b5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6cd131b5.c:168:12: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  168 |     return token
      |            ^~~~~
      |            Token
./samples/SAFE/__tmp_6cd131b5.c:168:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6cd131b5.c:168:17: error: expected ‘;’ at end of input
  168 |     return token
      |                 ^
      |                 ;
./samples/SAFE/__tmp_6cd131b5.c:168:5: error: expected declaration or statement at end of input
  168 |     return token
      |     ^~~~~~
